[modified] Додано інформацію про дисципліну та студента

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Звіти до лабораторних робіт</title>
+</head>
+<main>
+  <h style="text-align: center;"> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ. <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК." </h>
+  <h style="text-align: center"> Студент групи ІО-16 Гадієв Ренат Анатолійович </h>
+</main>
