--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Звіти до лабораторних робіт</title>
 </head>
 <main>
-  <h style="text-align: center;"> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ. <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК." </h>
-  <h style="text-align: center"> Студент групи ІО-16 Гадієв Ренат Анатолійович </h>
+  <h style="align: center; font-weight: bold;"> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ. <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК." </h>
+  <h style="align: center; font-weight: bold;"> <br> Студент групи ІО-16 Гадієв Ренат Анатолійович </h>
 </main>
