[modified] Виправлено помилки

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Звіти до лабораторних робіт</title>
 </head>
-<main>
-  <h align="center"; style="font-weight: bold;"> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ. <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК." </h>
-  <h lign="center" style="font-weight: bold;"> <br> Студент групи ІО-16 Гадієв Ренат Анатолійович </h>
-</main>
+<body>
+    <main>
+      <h1 style="text-align: center; font-weight: bold;"> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ". <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК. </h1>
+      <h2 style="text-align: center; font-weight: bold;"> Студент групи ІО-16 Гадієв Ренат Анатолійович </h2>
+    </main>
+</body>
+</html>
