[modified] Створено головне меню з кнопок

--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Звіти до лабораторних робіт</title>
 </head>
 <body>
-    <main>
-      <h1 style="text-align: center; font-weight: bold;"> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ". <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК. </h1>
-      <h2 style="text-align: center; font-weight: bold;"> Студент групи ІО-16 Гадієв Ренат Анатолійович </h2>
+    <main class="centered">
+        <h1> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ". <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК. </h1>
+        <h2> Студент групи ІО-16 Гадієв Ренат Анатолійович </h2>
+        <div class="main-buttons">
+            <button>Лабораторна <br> робота №1</button>
+            <button>Лабораторна <br> робота №2</button>
+            <button>Лабораторна <br> робота №3</button>
+            <button>Лабораторна <br> робота №4</button>
+            <button>Лабораторна <br> робота №5</button>
+            <button>Лабораторна <br> робота №6</button>
+            <button>Лабораторна <br> робота №7</button>
+            <button>Лабораторна <br> робота №8</button>
+            <button>Лабораторна <br> робота №9</button>
+        </div>
     </main>
 </body>
 </html>
