--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="js/app.js"></script>
     <title>Звіти до лабораторних робіт</title>
 </head>
 <body>
     <main class="centered">
         <h1> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ". <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК. </h1>
         <h2> Студент групи ІО-16 Гадієв Ренат Анатолійович </h2>
-        <div class="main-buttons">
-            <button>Лабораторна <br> робота №1</button>
-            <button>Лабораторна <br> робота №2</button>
+        <div id="main-buttons-wrapper">
+            <button class="main-buttons" onclick="SetReport('lab1')">Лабораторна <br> робота №1</button>
+            <button class="main-buttons" onclick="SetReport('lab2')">Лабораторна <br> робота №2</button>
             <button>Лабораторна <br> робота №3</button>
             <button>Лабораторна <br> робота №4</button>
             <button>Лабораторна <br> робота №5</button>
@@ -20,6 +21,10 @@
             <button>Лабораторна <br> робота №7</button>
             <button>Лабораторна <br> робота №8</button>
             <button>Лабораторна <br> робота №9</button>
+        </div>
+        <div id="side-btn-wrapper"></div>
+        <div id="output">
+
         </div>
     </main>
 </body>
