[test] Модифікація вигляду кнопок

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2> Студент групи ІО-16 Гадієв Ренат Анатолійович </h2>
         <div id="main-buttons-wrapper">
             <button class="main-buttons" onclick="SetReport('lab1')">Лабораторна <br> робота №1</button>
-            <button class="main-buttons" onclick="SetReport('lab2')">Лабораторна <br> робота №2</button>
+            <button>Лабораторна <br> робота №2</button>
             <button>Лабораторна <br> робота №3</button>
             <button>Лабораторна <br> робота №4</button>
             <button>Лабораторна <br> робота №5</button>
