[test] Тестування різних кольорів і розташувань

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <main class="centered">
         <h1> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ". <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК. </h1>
         <h2> Студент групи ІО-16 Гадієв Ренат Анатолійович </h2>
-        <div id="main-buttons-wrapper">
-            <button class="main-buttons" onclick="SetReport('lab1')">Лабораторна <br> робота №1</button>
+        <div id ="main-buttons-field">
+            <button onclick="SetReport('lab1')">Лабораторна <br> робота №1</button>
             <button>Лабораторна <br> робота №2</button>
             <button>Лабораторна <br> робота №3</button>
             <button>Лабораторна <br> робота №4</button>
