--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="js/app.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Звіти до лабораторних робіт</title>
 </head>
 <body>
     <main class="centered">
         <h1> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ". <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК. </h1>
         <h2> Студент групи ІО-16 Гадієв Ренат Анатолійович </h2>
-        <div id ="main-buttons-field">
+        <div id="main-buttons-field">
             <button onclick="SetReport('lab1')">Лабораторна <br> робота №1</button>
             <button>Лабораторна <br> робота №2</button>
             <button>Лабораторна <br> робота №3</button>
