--- a/reports/init-content.html
+++ b/reports/init-content.html
@@ -1,8 +1,8 @@
 <div id="empty-output"></div>
 
 <div id="lab1-sidebar">
-    <button class="side-btn" onclick="lab1LoadFirstArticle()">Опис предметного середовища</button>
-    <button class="side-btn" onclick="lab1LoadSecondArticle()">Тема. Мета. Місце розташування</button>
-    <button class="side-btn" onclick="lab1LoadThirdArticle()">Структура документа</button>
-    <button class="side-btn" onclick="lab1LoadFourthArticle()">Висновки</button>
+    <button onclick="lab1LoadFirstArticle()">Опис предметного середовища</button>
+    <button onclick="lab1LoadSecondArticle()">Тема. Мета. Місце розташування</button>
+    <button onclick="lab1LoadThirdArticle()">Структура документа</button>
+    <button onclick="lab1LoadFourthArticle()">Висновки</button>
 </div>
