--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="js/app.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Звіти до лабораторних робіт</title>
 </head>
 <body>
@@ -23,7 +22,7 @@
             <button>Лабораторна <br> робота №8</button>
             <button>Лабораторна <br> робота №9</button>
         </div>
-        <div id="side-btn-wrapper"></div>
+        <div id="sidebar"></div>
         <div id="output">
 
         </div>
