--- a/reports/init-content.html
+++ b/reports/init-content.html
@@ -1,19 +1,8 @@
 <div id="empty-output"></div>
 
 <div id="lab1-sidebar">
-    <button class="side_button" onclick="lab1LoadFirstArticle()">Опис предметного середовища</button>
-    <button class="side_button" onclick="lab1LoadSecondArticle()">Тема. Мета. Місце розташування</button>
-    <button class="side_button" onclick="lab1LoadThirdArticle()">Структура документа</button>
-    <button class="side_button" onclick="lab1LoadFourthArticle()">Висновки</button>
-</div>
-
-<div id="lab2-sidebar">
-    <button class="side_button" onclick="lab2LoadFirstArticle()">Тема, мета ЛР №2. Місце розташування сайту, звіту</button>
-    <button class="side_button" onclick="lab2LoadSecondArticle()">Способи підключення стилів</button>
-    <button class="side_button" onclick="lab2LoadThirdArticle()">Селектори</button>
-    <button class="side_button" onclick="lab2LoadFourthArticle()">
-        CSS. Шрифти Текст Таблиці Фон Контур Списки CSS
-        просунутий
-    </button>
-    <button class="side_button" onclick="lab2LoadFifthArticle()">Висновки до ЛР №2</button>
+    <button class="side-btn" onclick="lab1LoadFirstArticle()">Опис предметного середовища</button>
+    <button class="side-btn" onclick="lab1LoadSecondArticle()">Тема. Мета. Місце розташування</button>
+    <button class="side-btn" onclick="lab1LoadThirdArticle()">Структура документа</button>
+    <button class="side-btn" onclick="lab1LoadFourthArticle()">Висновки</button>
 </div>
