--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
             <button>Лабораторна <br> робота №8</button>
             <button>Лабораторна <br> робота №9</button>
         </div>
-        <div id="sidebar"></div>
+        <div id="side-btn-wrapper"></div>
         <div id="output">
 
         </div>
