--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <script src="js/app.js"></script>
-    <title>Звіти до лабораторних робіт</title>
+    <title>Звіти</title>
 </head>
 <body>
-    <main class="centered">
-        <h1> ЗВІТИ ДО ЛАБОРАТОРНИХ РОБІТ <br> З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ". <br> ОСНОВИ FRONT-END ТА BACK-END РОЗРОБОК. </h1>
-        <h2> Студент групи ІО-16 Гадієв Ренат Анатолійович </h2>
-        <div id="main-buttons-field">
-            <button onclick="SetReport('lab1')">Лабораторна <br> робота №1</button>
-            <button>Лабораторна <br> робота №2</button>
-            <button>Лабораторна <br> робота №3</button>
-            <button>Лабораторна <br> робота №4</button>
-            <button>Лабораторна <br> робота №5</button>
-            <button>Лабораторна <br> робота №6</button>
-            <button>Лабораторна <br> робота №7</button>
-            <button>Лабораторна <br> робота №8</button>
-            <button>Лабораторна <br> робота №9</button>
-        </div>
-        <div id="side-btn-wrapper"></div>
-        <div id="output">
+    <header>
+        <article class="heading-wrapper">
+            <p class="heading-main">
+                ЗВІТИ З ЛАБОРАТОРНИХ РОБІТ<br>
+                З ДИСЦИПЛІНИ "WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ.<br>
+                ОСНОВИ FRONTEND та BACKEND РОЗРОБОК"
+            </p>
+            <p class="student-info">
+                Студент групи ІО-16 Гадієв Ренат Анатолійович
+            </p>
+        </article>
+    </header>
+    <main>
+        <div class="wrapper">
+            <div id="lab-btn-wrapper">
+                <button class="lab-btn" onclick="changeCurrentReport('lab1')">Лабораторна робота №1</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab2')">Лабораторна робота №2</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab3')">Лабораторна робота №3</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab4')">Лабораторна робота №4</button>
+                <button class="lab-btn">Лабораторна робота №5</button>
+                <button class="lab-btn">Лабораторна робота №6</button>
+                <button class="lab-btn">Лабораторна робота №7</button>
+                <button class="lab-btn">Лабораторна робота №8</button>
+                <button class="lab-btn">Лабораторна робота №9</button>
+            </div>
+            <div id="side-btn-wrapper"></div>
+            <div id="output">
 
+            </div>
         </div>
     </main>
 </body>
