--- a/reports/init-content.html
+++ b/reports/init-content.html
@@ -6,3 +6,22 @@
     <button class="side-btn" onclick="lab1LoadThirdArticle()">Структура документа</button>
     <button class="side-btn" onclick="lab1LoadFourthArticle()">Висновки</button>
 </div>
+
+<div id="lab2-sidebar">
+    <button class="side-btn" onclick="lab2LoadFirstArticle()">Тема, мета ЛР №2. Місце розташування сайту, звіту</button>
+    <button class="side-btn" onclick="lab2LoadSecondArticle()">Способи підключення стилів</button>
+    <button class="side-btn" onclick="lab2LoadThirdArticle()">Селектори</button>
+    <button class="side-btn" onclick="lab2LoadFourthArticle()">
+        CSS. Шрифти Текст Таблиці Фон Контур Списки CSS
+        просунутий
+    </button>
+    <button class="side-btn" onclick="lab2LoadFifthArticle()">Висновки до ЛР №2</button>
+</div>
+
+<div id="lab3-sidebar">
+    <button class="side-btn" onclick="lab3LoadFirstArticle()">Тема. Мета. Місце розташування сайту, звіту</button>
+    <button class="side-btn" onclick="lab3LoadSecondArticle()">Завдання №1<br>Зовнішній вигляд макету. Код макету</button>
+    <button class="side-btn" onclick="lab3LoadThirdArticle()">Завдання №2</button>
+    <button class="side-btn" onclick="lab3LoadFourthArticle()">Завдання №3. FLEXBOX</button>
+    <button class="side-btn" onclick="lab3LoadConclusions()">Висновки</button>
+</div>
