--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -229,159 +229,181 @@
         <div style="width: 630px; height: 100px; margin-top: -570px; margin-left: 250px; background-color: red; border: 1px solid black;"> </div>
         <div style="width: 300px; height: 400px; background-color: white; border: 1px solid black; margin-left: 250px; margin-top: 20px"> 3 </div>
         <div style="width: 300px; height: 400px; background-color: blue; border: 1px solid black; margin-left: 580px; margin-top: -400px; margin-bottom: 15px"> 4 </div>
-        <div style="width: 1000px; height: 50px; background-color: yellow; padding: 50px; border: 1px solid black;"> 5 <div>
-     </div>
-            <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
-                color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
-    <div style="width:1000px; height: 800px; text-align: center; font-weight: bold">
         <div style="width: 1000px; height: 50px; background-color: yellow; padding: 50px; border: 1px solid black;">
-            
-</textarea>
+            5 <div>
+            </div>
+              <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
+                color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
+              <div style="width:1000px; height: 800px; text-align: center; font-weight: bold">
+              <div style="width: 1000px; height: 50px; background-color: yellow; padding: 50px; border: 1px solid black;">
+              <div style="width: 200px; height: 40px; background-color: white; border: 1px solid black;"></div>
+            1
+        </div>
+              <div style="width: 200px; height: 600px; background-color: blue; border: 1px solid black;"> 2 </div>
+              <div style="width: 630px; height: 100px; margin-top: -570px; margin-left: 250px; background-color: red; border: 1px solid black;"> </div>
+              <div style="width: 300px; height: 400px; background-color: white; border: 1px solid black; margin-left: 250px; margin-top: 20px"> 3 </div>
+              <div style="width: 300px; height: 400px; background-color: blue; border: 1px solid black; margin-left: 580px; margin-top: -400px; margin-bottom: 15px"> 4 </div>
+              <div style="width: 1000px; height: 50px; background-color: yellow; padding: 50px; border: 1px solid black;"> 5 <div>
+    </div>
+    </textarea>
         </div>
 
         <div id="p3-4">
             <h1>Гумова блокова верстка</h1>
-            <div style="width:100%; height: 100%; text-align: center; font-weight: bold">
-                <div style="width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
-                    <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div>
-                    1
+            <div style="width: 80%; height: 750px;">
+                <div style="background-color: blue; height: 20%; width: 100%; text-align: center; border: black 1px solid; box-sizing: border-box">
+                    <b style="color: white; font-size: 50px">1</b>
                 </div>
-                <div style="width: 20%; height: 60%; background-color: blue; border: 1px solid black;"> 2 </div>
-                <div style="width: 68%; height: 10%; margin-top: -60%; margin-left: 27%; background-color: red; border: 1px solid black;"> </div>
-                <div style="width: 30%; height: 40%; background-color: white; border: 1px solid black; margin-left: 250px; margin-top: 20px"> 3 </div>
-                <div style="width: 32%; height: 40%; background-color: blue; border: 1px solid black; margin-left: 580px; margin-top: -400px; margin-bottom: 15px"> 4 </div>
-                <div style="width: 100%; height: 2%; background-color: yellow; padding: 50px; border: 1px solid black;">
-                    5 <div>
+                <div style="height: 60%; width: 100%;">
+                    <div style="background-color: orange; width: 20%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
+                        <b style="color: black; font-size: 50px">5</b>
                     </div>
-
-                    <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
+                    <div style="background-color: white; width: 60%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
+                        <b style="color: black; font-size: 50px">4</b>
+                    </div>
+                    <div style="background-color: orange; width: 20%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
+                        <b style="color: black; font-size: 50px">2</b>
+                    </div>
+                </div>
+                <div style="background-color: blue; height: 20%; text-align: center; border: black 1px solid; box-sizing: border-box">
+                    <b style="color: white; font-size: 50px">3</b>
+                </div>
+            </div>
+            <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
                 color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
-                        <div style="width:100%; height: 100%; text-align: center; font-weight: bold">
-                            <div style="width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
-                                <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div>
-                                1
-                            </div>
-                            <div style="width: 20%; height: 60%; background-color: blue; border: 1px solid black;"> 2 </div>
-                            <div style="width: 68%; height: 10%; margin-top: -60%; margin-left: 27%; background-color: red; border: 1px solid black;"> </div>
-                            <div style="width: 30%; height: 40%; background-color: white; border: 1px solid black; margin-left: 250px; margin-top: 20px"> 3 </div>
-                            <div style="width: 32%; height: 40%; background-color: blue; border: 1px solid black; margin-left: 580px; margin-top: -400px; margin-bottom: 15px"> 4 </div>
-                            <div style="width: 100%; height: 2%; background-color: yellow; padding: 50px; border: 1px solid black;">
-                                5 <div>
-                                </div>
+            <div style="width: 90%; height: 750px; padding: 0">
+            <div style="background-color: blue; height: 20%; width: 100%; text-align: center; border: black 1px solid; box-sizing: border-box">
+            <b style="color: white; font-size: 50px">1</b>
+        </div>
+            <div style="height: 600px; width: 100%; padding: 0">
+            <div style="background-color: orange; width: 20%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
+            <b style="color: black; font-size: 50px">5</b>
+            </div>
+            <div style="background-color: white; width: 60%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
+            <b style="color: black; font-size: 50px">4</b>
+            </div>
+            <div style="background-color: orange; width: 20%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
+            <b style="color: black; font-size: 50px">2</b>
+            </div>
+        </div>
+            <div style="background-color: blue; height: 20%; text-align: center; border: black 1px solid; box-sizing: border-box">
+            <b style="color: white; font-size: 50px">3</b>
+        </div>
+    </div>
+    </textarea>
+        </div>
 
-</textarea>
-                </div>
 
-                <div id="p4-sidebar">
-                    <button class="side-btn" onclick="lab3LoadFourthArticlePart1()">Зовнішній вигляд сторінки</button>
-                    <button class="side-btn" onclick="lab3LoadFourthArticlePart2()">HTML-код</button>
-                    <button class="side-btn" onclick="lab3LoadFourthArticlePart3()">CSS-код сторінки</button>
-                    <button class="side-btn" onclick="lab3BackAndLoadSidebar()">Назад</button>
-                </div>
+        <div id="p4-sidebar">
+            <button class="side-btn" onclick="lab3LoadFourthArticlePart1()">Зовнішній вигляд сторінки</button>
+            <button class="side-btn" onclick="lab3LoadFourthArticlePart2()">HTML-код</button>
+            <button class="side-btn" onclick="lab3LoadFourthArticlePart3()">CSS-код сторінки</button>
+            <button class="side-btn" onclick="lab3BackAndLoadSidebar()">Назад</button>
+        </div>
 
-                <div id="p4-1">
-                    <h1>Зовнішній вигляд сторінки</h1>
-                    <img src="img/lab3/my-site-part1.png" alt="" style="width: 98%">
-                    <img src="img/lab3/my-site-part2.png" alt="" style="width: 98%">
-                </div>
+        <div id="p4-1">
+            <h1>Зовнішній вигляд сторінки</h1>
+            <img src="img/lab3/my-site-part1.png" alt="" style="width: 98%">
+            <img src="img/lab3/my-site-part2.png" alt="" style="width: 98%">
+        </div>
 
-                <div id="p4-2">
-                    <h1>HTML-код сторінки</h1>
-                    <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
+        <div id="p4-2">
+            <h1>HTML-код сторінки</h1>
+            <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
                 color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 400px; margin: 20px 0">
 <!DOCTYPE html>
 <html lang="en">
 <head>
-                    <meta charset="UTF-8">
-                    <title>Навчання - ІТ</title>
-                    <link rel="stylesheet" href="styles/styles.css">
+            <meta charset="UTF-8">
+            <title>Навчання - ІТ</title>
+            <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 <header>
-                    <div class="top-container">
-                    <div id="left-block-logo-caption">
-                    <div id="logo">
-                    <img src="img/it-icon.png" alt="">
+            <div class="top-container">
+            <div id="left-block-logo-caption">
+            <div id="logo">
+            <img src="img/it-icon.png" alt="">
             </div>
-                    <div id="caption">
+            <div id="caption">
                 Навчальний центр - ІТ
             </div>
         </div>
 
-                    <div id="info">
+            <div id="info">
             Ми працюємо Пн-Пт з 10:00 до 19:00 Сб-Нд: Вихідний
         </div>
     </div>
-                    <div class="nav-container">
-                    <button>Головна</button>
-                    <button>Акції</button>
-                    <button>Курси</button>
-                    <button>Про центр</button>
-                    <button>Контакти</button>
-                    <button>Ціни</button>
-                    <button>Блог</button>
+            <div class="nav-container">
+            <button>Головна</button>
+            <button>Акції</button>
+            <button>Курси</button>
+            <button>Про центр</button>
+            <button>Контакти</button>
+            <button>Ціни</button>
+            <button>Блог</button>
     </div>
 </header>
 
 <main>
-                    <div class="main-info-container">
-                    <div class="courses-info">
-                    <div><span>Курси інженерної графіки</span></div>
-                    <div><span>Курси компю'терного моделювання</span></div>
-                    <div><span>Курси програмування</span></div>
-                    <div><span>Курси бухгалтерів</span></div>
-                    <div><span>Курси системного адміністрування</span></div>
-                    <div><span>Комп'ютер для початківців</span></div>
-                    <div><span>Курси створення сайтів</span></div>
-                    <div><span>Просування web-сайтів (SEO)</span></div>
-                    <div><span>Курси менеджерів</span></div>
-                    <div><span>Курси графіки</span></div>
-                    <div><span>Створення сайту</span></div>
-                    <div><span>Курси дизайну</span></div>
+            <div class="main-info-container">
+            <div class="courses-info">
+            <div><span>Курси інженерної графіки</span></div>
+            <div><span>Курси компю'терного моделювання</span></div>
+            <div><span>Курси програмування</span></div>
+            <div><span>Курси бухгалтерів</span></div>
+            <div><span>Курси системного адміністрування</span></div>
+            <div><span>Комп'ютер для початківців</span></div>
+            <div><span>Курси створення сайтів</span></div>
+            <div><span>Просування web-сайтів (SEO)</span></div>
+            <div><span>Курси менеджерів</span></div>
+            <div><span>Курси графіки</span></div>
+            <div><span>Створення сайту</span></div>
+            <div><span>Курси дизайну</span></div>
         </div>
-                    <div class="study-form">
-                    <div style="font-size: 1.5em; font-weight: bold; margin: 10px 0; display: flex; align-items: center">
-                    <img src="img/people-icon.png" alt="" style="height: 1.5em; margin-right: 15px;">
+            <div class="study-form">
+            <div style="font-size: 1.5em; font-weight: bold; margin: 10px 0; display: flex; align-items: center">
+            <img src="img/people-icon.png" alt="" style="height: 1.5em; margin-right: 15px;">
                 Нова форма навчання
             </div>
-                    <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
-                    <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
+            <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
+            <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
                 Вибір будь-якого часу курсу.
             </div>
-                    <p style="text-indent: 10px">Проведення занять безпосередньо у слухача <b>на дому або в офісі</b></p>
-                    <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
-                    <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
+            <p style="text-indent: 10px">Проведення занять безпосередньо у слухача <b>на дому або в офісі</b></p>
+            <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
+            <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
                 Навчання за індивідуальною програмою
             </div>
-                    <p style="text-indent: 10px">
+            <p style="text-indent: 10px">
                 Ви вчите тільки те, що вам потрібно. Програма підбирається під вас!
             </p>
-                    <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
-                    <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
+            <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
+            <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
                 Безкоштовне встановлення ПЗ на ваш ноутбук або комп'ютер.
             </div>
-                    <p style="text-indent: 10px">
+            <p style="text-indent: 10px">
                 Викладач встановить, а також налаштує потрібну програму для виконання домашнього завдання.
             </p>
         </div>
-                    <div class="find-course">
-                    <div style="font-size: 1.5em; font-weight: bold; margin: 10px 0;">
+            <div class="find-course">
+            <div style="font-size: 1.5em; font-weight: bold; margin: 10px 0;">
                 Знайти курс по інтересам
             </div>
-                    <p style="font-size: 1.1em; margin: 10px 0">
+            <p style="font-size: 1.1em; margin: 10px 0">
                 Скористайтеся пошуком, щоб знайти потрібний вам курс або подивіться <a href="" id="link1">всі курси</a>
             </p>
-                    <input type="text" id="course-search" placeholder="Пошук курсів...">
+            <input type="text" id="course-search" placeholder="Пошук курсів...">
         </div>
     </div>
 
-                    <div class="additional-info">
-                    <div style="font-size: 1.8em; font-weight: bold; margin: 20px 0; align-self: center">Курси web-програмування в
+            <div class="additional-info">
+            <div style="font-size: 1.8em; font-weight: bold; margin: 20px 0; align-self: center">Курси web-програмування в
             Києві.
         </div>
-                    <div style="display: flex">
-                    <img src="img/web-prog.jpg" alt="" style="width: 30%; margin-left: 20px">
-                    <p class="additional-info-paragraph">
+            <div style="display: flex">
+            <img src="img/web-prog.jpg" alt="" style="width: 30%; margin-left: 20px">
+            <p class="additional-info-paragraph">
                 Ми шукаємо всіх тих, кому цікавий світ програмування! Хочете займатися розробкою програмного
                 забезпечення
                 і побудовою web-сайтів? А, може ви вже робите це все і жадаєте додаткових знань, або вирішили підвищити
@@ -395,20 +417,20 @@
 </main>
 
 <footer>
-                    <button>Ми на мапі</button>
-                    <button>Зв'язок з нами</button>
-                    <button>Корисні посилання</button>
-                    <button>Популярне на блозі</button>
+            <button>Ми на мапі</button>
+            <button>Зв'язок з нами</button>
+            <button>Корисні посилання</button>
+            <button>Популярне на блозі</button>
 </footer>
 
 </body>
 </html>
     </textarea>
-                </div>
+        </div>
 
-                <div id="p4-3">
-                    <h1>CSS-код сторінки</h1>
-                    <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
+        <div id="p4-3">
+            <h1>CSS-код сторінки</h1>
+            <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
                 color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 400px; margin: 20px 0">
 header {
     height: 150px;
@@ -565,12 +587,12 @@ footer > button {
     font-weight: bold;
 }
     </textarea>
-                </div>
+        </div>
 
-                <div id="lab3-conclusions">
-                    <h2>Висновок з лабораторної роботи</h2>
+        <div id="lab3-conclusions">
+            <h2>Висновок з лабораторної роботи</h2>
 
-                    <p>
-                        .
-                    </p>
-                </div>
+            <p>
+                .
+            </p>
+        </div>
