--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -247,7 +247,7 @@
 
 <div id="p3-4">
     <h1>Гумова блокова верстка</h1>
-    <div style="width:80%; height: 800px; text-align: center; font-weight: bold">
+    <div style="width:80%; height: 70%; text-align: center; font-weight: bold">
         <div style=" float: left; box-sizing: border-box; width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
             <div style="float: left; box-sizing: border-box; width: 20%; height: 20px; background-color: white; border: 1px solid black;"></div>
             1
@@ -261,7 +261,7 @@
 
     <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
                 color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
-        <div style="width:80%; height: 800px; text-align: center; font-weight: bold">
+        <div style="width:80%; height: 70%; text-align: center; font-weight: bold">
             <div style=" float: left; box-sizing: border-box; width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
                 <div style="float: left; box-sizing: border-box; width: 20%; height: 20px; background-color: white; border: 1px solid black;"></div>
                 1
