[modified] Added Lab3, 4, 5, 5.1, 6, fixed buds

--- a/reports/init-content.html
+++ b/reports/init-content.html
@@ -25,3 +25,41 @@
     <button class="side-btn" onclick="lab3LoadFourthArticle()">Завдання №3. FLEXBOX</button>
     <button class="side-btn" onclick="lab3LoadConclusions()">Висновки</button>
 </div>
+
+<div id="lab4-sidebar">
+    <button class="side-btn" onclick="lab4LoadFirstArticle()"> Тема. Мета. Місце розташування сайту, звіту.</button>
+    <button class="side-btn" onclick="lab4LoadSecondArticle()"> Мобільна версія</button>
+    <button class="side-btn" onclick="lab4LoadThirdArticle()"> Планшетна версія</button>
+    <button class="side-btn" onclick="lab4LoadFourthArticle()"> Десктопна версія</button>
+    <button class="side-btn" onclick="lab4LoadConclusions()"> Висновки</button>
+</div>
+
+<div id="lab5-sidebar">
+    <button class="side-btn" onclick="lab5LoadFirstArticle()"> Тема. Мета. Місце розташування сайту, звіту.</button>
+    <button class="side-btn" onclick="lab5LoadSecondArticle()"> Завдання №1</button>
+    <button class="side-btn" onclick="lab5LoadThirdArticle()"> Завдання №2</button>
+    <button class="side-btn" onclick="lab5LoadConclusions()"> Висновки</button>
+</div>
+
+<div id="lab5.1-sidebar">
+    <button class="side-btn" onclick="lab51LoadFirstArticle()"> Тема. Мета. Місце розташування сайту, звіту.</button>
+    <button class="side-btn" onclick="lab51LoadSecondArticle()"> Завдання №2</button>
+    <button class="side-btn" onclick="lab51LoadThirdArticle()"> Завдання №4</button>
+    <button class="side-btn" onclick="lab51LoadFourthArticle()"> Завдання №6</button>
+    <button class="side-btn" onclick="lab51LoadFifthArticle()"> Завдання №8</button>
+    <button class="side-btn" onclick="lab51LoadSixthArticle()"> Завдання №9</button>
+    <button class="side-btn" onclick="lab51LoadSeventhArticle()"> Завдання №10</button>
+    <button class="side-btn" onclick="lab51LoadConclusions()"> Висновки</button>
+</div>
+
+<div id="lab6-sidebar">
+    <button class="side-btn" onclick="lab6LoadFirstArticle()"> Тема. Мета. Місце розташування сайту, звіту.</button>
+    <button class="side-btn" onclick="lab6LoadSecondArticle()"> Завдання №2</button>
+    <button class="side-btn" onclick="lab6LoadThirdArticle()"> Завдання №4</button>
+    <button class="side-btn" onclick="lab6LoadFourthArticle()"> Завдання №6</button>
+    <button class="side-btn" onclick="lab6LoadFifthArticle()"> Завдання №7</button>
+    <button class="side-btn" onclick="lab6LoadSixthArticle()"> Завдання №8</button>
+    <button class="side-btn" onclick="lab6LoadSeventhArticle()"> Завдання №9</button>
+    <button class="side-btn" onclick="lab6LoadEighthArticle()"> Завдання №10</button>
+    <button class="side-btn" onclick="lab6LoadConclusions()"> Висновки</button>
+</div>
