--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <script src="js/app.js"></script>
+    <script src="js/lab6.js"></script>
     <title>Звіти</title>
 </head>
 <body>
@@ -29,8 +30,9 @@
                 <button class="lab-btn" onclick="changeCurrentReport('lab2')">Лабораторна робота №2</button>
                 <button class="lab-btn" onclick="changeCurrentReport('lab3')">Лабораторна робота №3</button>
                 <button class="lab-btn" onclick="changeCurrentReport('lab4')">Лабораторна робота №4</button>
-                <button class="lab-btn">Лабораторна робота №5</button>
-                <button class="lab-btn">Лабораторна робота №6</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab5')">Лабораторна робота №5</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab5.1')">Лабораторна робота №5.1</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab6')">Лабораторна робота №6</button>
                 <button class="lab-btn">Лабораторна робота №7</button>
                 <button class="lab-btn">Лабораторна робота №8</button>
                 <button class="lab-btn">Лабораторна робота №9</button>
