[modified] Bags fixing

--- a/reports/lab5.1.html
+++ b/reports/lab5.1.html
@@ -269,3 +269,9 @@
     <h2> Результати тестування:</h2>
         <img src="images/Lab5.1Task10.jpg" alt="" style="width: 50%">
 </div>
+
+
+<div id="p8">
+  <p> З використанням стрілочних функцій, коллбеків та сценаріїв JS реалізовано задані варіантом завдання, отримані навичкі застосування та теоретичні знання щодо 
+    об'єктної моделі документа DOM та стрілочних функцій.</p>
+</div>
