--- a/reports/lab6.html
+++ b/reports/lab6.html
@@ -125,3 +125,9 @@
   </div>
   <div id="boxes"></div>  
 </div>
+
+<div id="p9">
+  <p> З використанням стрілочних функцій та сценаріїв JS реалізовано задані варіантом завдання, отримані навичкі застосування та теоретичні знання щодо 
+    об'єктної моделі документа DOM та стрілочних функцій.
+  </p>
+</div>
