[modified] Fixing bugs

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <button class="lab-btn" onclick="changeCurrentReport('lab5')">Лабораторна робота №5</button>
                 <button class="lab-btn" onclick="changeCurrentReport('lab5.1')">Лабораторна робота №5.1</button>
                 <button class="lab-btn" onclick="changeCurrentReport('lab6')">Лабораторна робота №6</button>
-                <button class="lab-btn">Лабораторна робота №7</button>
-                <button class="lab-btn">Лабораторна робота №8</button>
-                <button class="lab-btn">Лабораторна робота №9</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab7')">Лабораторна робота №7</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab8')">Лабораторна робота №8</button>
+                <button class="lab-btn" onclick="changeCurrentReport('lab9')">Лабораторна робота №9</button>
             </div>
             <div id="side-btn-wrapper"></div>
             <div id="output">
