--- a/reports/init-content.html
+++ b/reports/init-content.html
@@ -63,3 +63,19 @@
     <button class="side-btn" onclick="lab6LoadEighthArticle()"> Завдання №10</button>
     <button class="side-btn" onclick="lab6LoadConclusions()"> Висновки</button>
 </div>
+
+<div id="lab7-sidebar">
+    <button class="side-btn" onclick="lab7LoadFirstArticle()"> Тема. Мета. Місце розташування сайту, звіту.</button>
+    <button class="side-btn" onclick="lab7LoadSecondArticle()"> Завдання №1</button>
+    <button class="side-btn" onclick="lab7LoadThirdArticle()"> Завдання №2</button>
+    <button class="side-btn" onclick="lab7LoadConclusions()"> Висновки</button>
+</div>
+
+<div id="lab8-sidebar">
+    <button class="side-btn" onclick="lab8LoadFirstArticle()"> Інформація про курс</button>
+    <button class="side-btn" onclick="lab8LoadSecondArticle()"> Модуль №1</button>
+    <button class="side-btn" onclick="lab8LoadThirdArticle()"> Модуль №2</button>
+    <button class="side-btn" onclick="lab8LoadFourthArticle()"> Модуль №3</button>
+    <button class="side-btn" onclick="lab8LoadFifthArticle()"> Модуль №4</button>
+    <button class="side-btn" onclick="lab8LoadSixthArticle()"> Сертифікат</button>
+</div>
