--- a/reports/lab1.html
+++ b/reports/lab1.html
@@ -1,12 +1,13 @@
 <div id="p1">
     <h2 style="font-weight: bold; margin: 0 0">
-        "Функціонал додатку:
+        Функціонал додатку:
     </h2>
     <h3 style="font-weight: bold; margin: 0.5em 0">Меню:</h3>
     <ul>
         <li>Лістинг усіх доступних блюд, разом із фото та ціною</li>
         <li>Можливість обрати потрібний розмір піци.<li>
         <li>Можливість додавання товару до кошика.</li>
+        <li>Наявність акційних пропозицій</li>
     </ul>
 
     <h3 style="font-weight: bold; margin: 0.5em 0">Кошик:</h3>
@@ -195,16 +196,16 @@
 
     <p>Цей код виглядатиме на сторінці ось так:</p>
 
-    <img src="img/apple.jpg" alt="Опис зображення" style="width: 200px">
+    <img src="images/image.jpg" alt="Опис зображення" style="width: 200px">
 </div>
 
 <div id="lab1-conclusion">
     <h2>Висновок з лабораторної роботи</h2>
 
     <p>
-        Під час виконання лабораторної роботи отримано інформацію на навички про використання Figma, створено макет головної сторінки сайту.
-        Отримано знання про структуру HTML-документи та основні його елементи, розроблено головну сторінку сайту та резюме.
-        Створено репозиторії для зберігання розробленого коду сайту, резюме та сайту зі звітами.
+        Під час виконання лабораторної роботи обрано предметну галузь для проекту та визначено його функціонал, отримано теоретичні відомості щодо структури HTML-документу, в тому числі про таблиці, списки,
+        форми та зображення. В Figma розроблено макет головної сторінки застосунку, виконані додаткові завдання по створенню макетів в Figma. Створено GitHub репозиторії 
+        для зберігання розробленого коду для резюме, застосунку, а також звітного HTML документу. Створено HTML шаблон головної сторінки застосунку, а також звітного HTML-документу.
     </p>
 
 </div>
