--- a/reports/lab2.html
+++ b/reports/lab2.html
@@ -170,6 +170,15 @@
     <h2>Висновок з лабораторної роботи</h2>
 
     <p>
-        Для проекту з попередньої лабораторної роботи застосовані стилі CSS, отримані знання та навички використання стилів.
+        Під час виконання лабораторної роботи отримані теоретичні відомості та практичні навчики для застосування CSS-стилів до HTML-документу, в тому
+        числі розглянуто:
+        <ul>
+            <li>Способи підключення стилів</li>
+            <li>Селектори та їх типи</li>
+            <li>Приклади використання селекторів</li>
+            <li>Використання шрифтів, фонового кольору, кольору тексту, таблиць та списків</li>
+        </ul>
+        У власному веб-застосунку застосовані селектори класів, селектори ідентифікаторів, дочірні селектори, селектори тегів, за допомогою GoogleFonts підключено 
+        шрифт, змінено фоновий колір, кольори header-у та footer-у, а також колір тексту у них для покращення зовнішнього вигляду WEB-застосунку.
     </p>
 </div>
