--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -711,8 +711,35 @@
 <div id="lab3-conclusions">
         <h2>Висновок з лабораторної роботи</h2>
             <p>
-                Під час виконання лабораторної роботи отримано теоретичні відомості і навички щодо використання макетів, CSS-стилів та Flexbox
-                 під час розробки HTML-сторінок, із використанням Flexbox модифіковано основний проект, розроблені фіксовані та гумові макети табличної 
-                 і блокої верстки, із використанням Flexbox розробленно HTML сторінку із заданою темою та структурою. 
+                Під час виконання лабораторної роботи розглянуто різні типи версток HTML-документу, а саме:
+                <ul>
+                    <li>Таблична верстка - гумова та фіксована</li>
+                    <li>Блокова верстка - гумова та фіксована</li>
+                    <li>Верстка засобами CSS та Flexbox</li>
+                </ul>
+                Переваги різних типів верстки:
+                <ul>
+                    <li>Таблична верстка - легкість освоєння та використання, візуально чіткий розподіл контенту.</li>
+                    <li>Блокова верстка - менший обсяг коду у порівнянні із табличною версткою, широкі можливості для створення
+                        складних макетів та адаптивних дизайнів, зручність під час застосування стилів до елементів.
+                    </li>
+                    <li>Верстка засобами CSS та Flexbox - дозволяє створювати надзичайно гнучкі та адаптивні макети, нажає зручні інструменти для 
+                        вирівнювання та розподілу елементів, а також макети створені таким типом верстки гарно оптимізовані для сучасних браузерів.
+                    </li>
+                </ul>
+                Недоліки різних типів верстки:
+                <ul>
+                    <li>Таблична верстка - дуже мала гнучкість, навіть маленькі зміни в одній ячейці можуть призвести до помилок в макеті, 
+                        в різних браузерах макети можуть відображатися по різному, потребує великої кількості коду. </li>
+                    <li>Блокова верстка - складніша в освоєнні ніж таблична верстка, у старих браузерах макети можуть відображатися неправильно.</li>
+                    <li>Верстка засобами CSS та Flexbox - часто не підтримується старими браузерами.
+                    </li>
+                </ul>
+                Отже, якщо підбити підсумок, то таблична верстка - найстаріша, але й найнезручніша, потребує великого обсягу коду та не забезпечує адаптивності макету, наразі майже
+                не застосовується у великих проектах, блокова верстка - забезпечує непогану адаптивність макетів і більш зручні методи для застосування стилів, проте є складнішою 
+                в освоєнні, верстка методами FlexBox та CSS - забезпечує відмінну адаптивність макетів, та інструменти для керування розташуванням елементів, майже немає недоліків, окрім 
+                відсутності підтримки у багатьох старих браузерах.<br>
             </p>
+
+            <p>Для більш детального ознайомлення з різними типами верстки було виконанне завдання №2 та завдання №3, а для покращення макету Web-застосунку було використано методи Flexbox та CSS</p>
 </div>
