--- a/reports/lab4.html
+++ b/reports/lab4.html
@@ -26,10 +26,15 @@
 <div id="p2">
     <h3>Мобільна версія</h3>
     <p>
-        До мобільних пристроїв були віднесені всі пристрої, що мають ширину не більшу аніж 768px. Адаптація проекту під мобільні пристої вимагала найбільших зусиль, оскільки потрібно
-        було суттєво змінити розташування та розміри елементів меню, header-у та footer-у.
+        До мобільних пристроїв були віднесені всі пристрої, що мають ширину не більшу аніж 768px. Під час адаптації WEB-застосунку для перегляду на таких девайсах довелося 
+        вирішити низку проблем, таких як:
+        <ul>
+            <li>Розташування навігаційних посилань на header-і: до адаптації посилання налазили один на одного або і зовсім вилазили за межі екрану.</li>
+            <li>Розташування і розмір акційної пропозиції: до адаптації зображення акційної пропозиції було замаленьким.</li>
+            <li>Розташування елементів меню: до адаптації кнопки з опціями не вміщували увесь текст, а отже він вилазив за їх межі, а фото некоректно стискалися, не зберігаючи пропорцій.</li>
+        </ul>
     </p>
-    <h3>Скріншот головної сторінки на мобільному пристрої (Iphone XR):</h3>
+    <h3>Скріншот головної сторінки на мобільному пристрої після адаптації (Iphone XR):</h3>
     <img src="images/mobile.png" alt="" style="width: 100%">
     <h3>Програмний код</h3>
     <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
@@ -107,10 +112,14 @@
 <div id="p3">
     <h3>Планшетна версія</h3>
     <p>
-        До плвншетыв були віднесені всі пристрої, що мають ширину більшу ніж 768px та меншу за 991px. Для адаптації під такі пристрої біло змінено розмірі 
-        кнопок для обрання опцій, розміри header-у та footer-у.
+        До планшетів були віднесені всі пристрої, що мають ширину більшу ніж 768px та меншу за 1200px. Під час адаптації WEB-застосунку виникло набагато менше проблем, 
+        ніж під час адаптації під мобільні пристрої, і довелося внести тільки наступні зміни:
+        <ul>
+            <li>Зміна розміру кнопок та їх контейнеру, для запобіганню нестачі простору для тексту</li>
+            <li>Зміна розтішування елементів меню</li>
+        </ul>
     </p>
-    <h3>Скріншот головної сторінки на планшеті (Ipad Pro):</h3>
+    <h3>Скріншот головної сторінки на планшеті після адаптації (Ipad Pro):</h3>
     <img src="images/tablet.png" alt="" style="width: 100%">
     <h3>Програмний код</h3>
     <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
@@ -144,7 +153,7 @@
 <div id="p4">
     <h3>Десктопна версія</h3>
     <p>
-        До мобільних пристроїв були віднесені всі пристрої, що мають ширину більшу за 991px. Оскільки сайт з самого <br>
+        До десктопівбули віднесені всі пристрої, що мають ширину більшу за 1200px. Оскільки WEB-застосунок з самого <br>
         початку розроблявся для ПК, то суттєвих змін до коду вносити не довелося.
     </p>
     <h3>Скріншот головної сторінки на ПК :</h3>
@@ -248,6 +257,7 @@ header {
     <h2>Висновок з лабораторної роботи</h2>
         <p>
             Під час виконання лабораторної роботи отримано теоретичні відомості і навички щодо використання адаптивної верстки під час WEB-розробки,
-            завдяки використанню медіатегів та логічних операторів, проект адаптовано для використання на мобільних пристроях, планшетах та ПК.
+            завдяки використанню медіатегів та логічних операторів, проект адаптовано для використання на мобільних пристроях, планшетах та ПК. Найскладнішою виявилася адаптація 
+            WEB-застосунку під мобільні пристрої.
         </p>
 </div>
