--- a/reports/lab5.html
+++ b/reports/lab5.html
@@ -171,5 +171,20 @@
 </div>
 
 <div id="p4">
-  <p> З використанням сценаріїв JavaScript, розроблено програму, яка виконує завдання задані варіантом, отримані навички створення скриптів та їх використання у проекті.</p>
+  <h2>Функціонал,створений під час виконання роботи:</h2>
+  <p>Для обробки масиву:</p>
+  <ul>
+    <li>Створено функцію, яка перебирає масив і додає значення елементів з парними індексами (0, 2, 4, ...).</li>
+    <li>Створено функцію, яка порівнює всі елементи масиву та знаходить елемент з найбільшим значенням, а також його індекс.</li>
+    <li>Створено функцію, яка перебирає елементи масиву з непарними індексами (1, 3, 5, ...) та знаходить елемент з найменшим значенням, а також його індекс.</li>
+    <li>Створено функцію, яка сортує масив за допомогою алгоритму сортування бульбашкою</li>
+  </ul>
+
+  <p>Для створення динамічного меню:</p>
+  <ul>
+    <li>Створено горизонтальне та вертикальне динамічне меню з пунктами, взятими із статичного масиву.</li>
+    <li>При натисканні на пункт меню завантажується відповідна HTML-сторінка.</li>
+    <li>Меню присутнє на всіх сторінках.</li>
+  </ul>
+
 </div>
