[add] Labwork #9 report

--- a/reports/init-content.html
+++ b/reports/init-content.html
@@ -79,3 +79,11 @@
     <button class="side-btn" onclick="lab8LoadFifthArticle()"> Модуль №4</button>
     <button class="side-btn" onclick="lab8LoadSixthArticle()"> Сертифікат</button>
 </div>
+
+<div id="lab9-sidebar">
+    <button class="side-btn" onclick="lab9LoadFirstArticle()"> Інформація про курс</button>
+    <button class="side-btn" onclick="lab9LoadSecondArticle()"> Модуль №1</button>
+    <button class="side-btn" onclick="lab9LoadThirdArticle()"> Модуль №2</button>
+    <button class="side-btn" onclick="lab9LoadFourthArticle()"> Модуль №3</button>
+    <button class="side-btn" onclick="lab9LoadSixthArticle()"> Сертифікат</button>
+</div>
