--- a/reports/lab8.html
+++ b/reports/lab8.html
@@ -1,6 +1,6 @@
 <div id="p1">
     <h2 style="text-align: center;"> Курс: React Basics</h2>
-    <h3>Навички, які можна отримати під час проходження курсу:</h3>
+    <h3>Навички, які можна отримати під час проходження курсу (від розробників):</h3>
     <ul>
         <li>Use reusable components to render views where data changes over time</li>
         <li>Use props to pass data between components. Create dynamic and interactive web pages and apps</li>
@@ -39,7 +39,7 @@
 
 <div id="p5">
     <h2 style="text-align: center;">Практика</h2>
-    <p>Посилання на GitHub репозиторій: <a href="https://github.com/GMBFRV/React-Basics-Practice" target="_blank">Репозиторій</a></p></p>
+    <p>Посилання на GitHub репозиторій: <a href="https://github.com/GMBFRV/Web-Basics-Course2" target="_blank">Репозиторій</a></p></p>
     <img src="images/Course1PracticeResult.jpg" alt="" style="width: 50%">
 </div>
 
