--- a/reports/lab5.1.html
+++ b/reports/lab5.1.html
@@ -272,6 +272,28 @@
 
 
 <div id="p8">
-  <p> З використанням стрілочних функцій, коллбеків та сценаріїв JS реалізовано задані варіантом завдання, отримані навичкі застосування та теоретичні знання щодо 
-    об'єктної моделі документа DOM та стрілочних функцій.</p>
+  Під час виконання лабораторної роботи отримано теоретичні знання та практичні навички роботи з об'єктами в JavaScript.
+  Виконання лабораторної роботи потребувало наступних теоретичних знань:
+  <ul>
+      <li>Створення та маніпуляція об'єктами</li>
+      <li>Методів об'єкта</li>
+      <li>Масивів об'єктів</li>
+      <li>Деструктуризації об'єктів</li>
+      <li>Callback-функцій</li>
+      <li>Стрілочних функцій</li>
+      <li>Стрілочних функцій як колбеків</li>
+  </ul>
+
+  Під час розробки були використані наступні методи:
+  <ul>
+      <li>Створення об'єктів та додавання до них властивостей і методів</li>
+      <li>Маніпуляція масивами об'єктів, включаючи додавання, видалення та оновлення об'єктів</li>
+      <li>Застосування деструктуризації об'єктів для спрощення доступу до властивостей</li>
+      <li>Реалізація callback-функцій для обробки асинхронних операцій</li>
+      <li>Використання стрілочних функцій для покращення читабельності та зменшення обсягу коду</li>
+      <li>Застосування стрілочних функцій як колбеків для більш лаконічного та ефективного коду</li>
+  </ul>
+  Ця робота дозволила набути важливих навичок у використанні об'єктів і сучасних функцій JavaScript, що є необхідними для розробки складних та ефективних веб-додатків. 
+</p>
+
 </div>
