--- a/reports/lab6.html
+++ b/reports/lab6.html
@@ -127,7 +127,23 @@
 </div>
 
 <div id="p9">
-  <p> З використанням стрілочних функцій та сценаріїв JS реалізовано задані варіантом завдання, отримані навичкі застосування та теоретичні знання щодо 
-    об'єктної моделі документа DOM та стрілочних функцій.
-  </p>
+<p>
+  Під час виконання лабораторної роботи отримано теоретичні знання та практичні навички роботи з класами, об'єктною моделлю документа (DOM), подіями та делегуванням подій у JavaScript. 
+  Отримані під час розробки навичики включають в себе:
+  <ul>
+      <li>Створення та використання класів у JavaScript</li>
+      <li>Використання елементів DOM</li>
+      <li>Обробка подій та використання об'єкта події</li>
+      <li>Організація делегування подій/li>
+  </ul>
+
+  У процесі роботи було реалізовано кілька програмних рішень, що демонструють ефективне використання цих концепцій:
+  <ul>
+      <li>Створення класів та об'єктів, що інкапсулюють дані та поведінку</li>
+      <li>Маніпуляція DOM-елементами для динамічного оновлення контенту сторінки</li>
+      <li>Обробка подій користувача, таких як кліки, натискання клавіш та інші</li>
+      <li>Використання делегування подій для зменшення кількості обробників подій та покращення продуктивності</li>
+  </ul>
+  Ця робота дозволила набути важливих навичок у використанні сучасних методів програмування на JavaScript, що є необхідними для створення складних та інтерактивних веб-додатків. 
+</p>
 </div>
