--- a/reports/lab7.html
+++ b/reports/lab7.html
@@ -298,5 +298,21 @@ form.addEventListener('submit', event => {
 </div>
 
 <div id="p4">
-    
+    <p>
+        Під час виконання лабораторної роботи отримано теоретичні знання та практичні навички з використання Web Storage API, створення модального вікна,
+         організації коду за принципами модульності та делегування подій. Виконання лабораторної роботи вимагало реалізацію наступних завдань:
+        <ul>
+            <li>Використання Web Storage API для зберігання даних у веб-сховищі</li>
+            <li>Створення модального вікна</li>
+            <li>Створення макету галереї зображень</li>
+        </ul>
+        У процесі роботи було реалізовано кілька програмних рішень, що демонструють ефективне використання цих концепцій:
+        <ul>
+            <li>Зберігання та отримання даних з локального сховища за допомогою Web Storage API</li>
+            <li>Створення та управління модальними вікнами для відображення додаткової інформації та взаємодії з користувачем</li>
+            <li>Розробка макету галереї зображень, що дозволяє користувачам переглядати зображення у модальному вікні</li>
+            <li>Використання делегування подій для ефективного управління подіями у галереї зображень</li>
+        </ul>
+        Ця робота дозволила набути важливих навичок у використанні сучасних методів веб-розробки, зокрема роботи з Web Storage API, створення модальних вікон та делегування подій. 
+    </p>
 </div>
